<resources>
    <string name="app_name">Diddiy</string>
    <string name="nombre">NicolasPerez</string>
    <string name="Mensaje">Inicia una nueva aventura con Diddiy y descubre una nueva forma de ver el mundo</string>
    <string name="comenzar">Comenzar</string>
    <string name="registrate">Registrate</string>
    <string name="mensaje2">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="recuperarcontraseña">Recupera Tu Contraseña</string>
    <string name="completa_datos">Por favor completa tus datos para registrarte</string>
    <string name="nombres_rg">Nombres</string>
    <string name="apellidos_rg">Apellidos</string>
    <string name="correo_electronico_rg">Correo electrónico</string>
    <string name="telefono_rg">Teléfono</string>
    <string name="contrasea_rg">Contraseña</string>
    <string name="repetir_contrasea_rg">Repetir contraseña</string>
    <string name="terminos_y_condiciones_rg">Acepto los Términos y Condiciones</string>
    <string name="registrarse_rg">Registrarse</string>
    <string name="ya_tienes_cuenta_inicia_sesion_rg">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="ingresar_correo">Ingresa tu correo electrónico para recuperar tu contraseña</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="tel_fono_123456789">Teléfono: 123456789</string>
    <string name="correo_juan_example_com">Correo: juan@example.com</string>
    <string name="apellido_p_rez">Apellido: Pérez</string>
    <string name="nombre_juan">Nombre: Juan</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
</resources>