<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan">

    <ImageView
        android:id="@+id/iv_logo_rg"
        android:layout_width="163dp"
        android:layout_height="106dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tv_NombreApp_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/app_name"
        android:textColor="#1B1A1A"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_Mensaje_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completa_datos"
        android:textSize="16sp"
        android:textColor="#1B1A1A"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_NombreApp_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/et_user_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombres_rg"
        android:background="@drawable/edittext_borde"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_Mensaje_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"/>

    <EditText
        android:id="@+id/et_apellidos_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos_rg"
        android:background="@drawable/edittext_borde"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/et_user_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="32dp"/>

    <EditText
        android:id="@+id/et_correo_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico_rg"
        android:background="@drawable/edittext_borde"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/et_apellidos_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="32dp"/>

    <EditText
        android:id="@+id/et_telefono_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/telefono_rg"
        android:background="@drawable/edittext_borde"
        android:padding="12dp"
        android:inputType="phone"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/et_correo_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="32dp"/>

    <EditText
        android:id="@+id/et_contraseña_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasea_rg"
        android:background="@drawable/edittext_borde"
        android:padding="12dp"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/et_telefono_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="32dp"/>

    <EditText
        android:id="@+id/et_repetir_contraseña_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repetir_contrasea_rg"
        android:background="@drawable/edittext_borde"
        android:padding="12dp"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/et_contraseña_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="32dp"/>

    <CheckBox
        android:id="@+id/cb_terminos_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:text="@string/terminos_y_condiciones_rg"
        android:textColor="#1B1A1A"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_repetir_contraseña_rg" />

    <Button
        android:id="@+id/btn_registro_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_outlined_red"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:padding="12dp"
        android:text="@string/registrarse_rg"
        android:textColor="#F13F3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_terminos_rg" />

    <TextView
        android:id="@+id/tvLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_cuenta_inicia_sesion_rg"
        android:textColor="#F13F3B"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_alternates_bold"
        app:layout_constraintTop_toBottomOf="@id/btn_registro_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
