<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan">


    <TextView
        android:id="@+id/tv_Mensaje_hm"
        android:layout_width="354dp"
        android:layout_height="116dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/Mensaje"
        android:textAlignment="center"
        android:textColor="#1B1A1A"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ImageView
        android:id="@+id/iv_logo_hm"
        android:layout_width="262dp"
        android:layout_height="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_NombreApp_hm"
        android:layout_width="210dp"
        android:layout_height="87dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/tv_registrate_hm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/registrate"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_comenzar_hm"
        android:layout_width="234dp"
        android:layout_height="69dp"
        android:background="@drawable/btn_outlined_red"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/comenzar"
        android:textColor="#F13F3B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_registrate_hm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Mensaje_hm" />
</androidx.constraintlayout.widget.ConstraintLayout>